@@ -1,5 +1,7 @@
 2003-08-12  Niklas Knutsson  <nq@altern.org>
 
+	* Interpret "xyz" as an unknown variable named xyz ("xyz" * x = x"xyz", not x^2yz)
+	* Add base conversion dialog
 	* Beautify units dialog
 	* Store pointer to unit in GUI to simplify the Unit/ComplexUnit mess
 	* Enable editing/creation of composite units
